# InetWorks

./: .gitignore  README.md
Computer/: Computer.cbp  (+6 more)
hse-base-cpp/: .gitlab-ci.yml  CMakeLists.txt  SCORE.md  SETUP.md
hse-base-cpp/deadlines/: ami.yml
hse-base-cpp/tasks/archiver/: readme.md
hse-base-cpp/tasks/bitops/: .tester.json  CMakeLists.txt  README.md  bitops.cpp  bitops.h  test.cpp
hse-base-cpp/tasks/bpe_tokenizer/: .tester.json  CMakeLists.txt  bpe_tokenizer.cpp  bpe_tokenizer.h  readme.md  test.cpp
hse-base-cpp/tasks/enumerate/: .tester.json  CMakeLists.txt  enumerate.h  readme.md  test.cpp
hse-base-cpp/tasks/fp16/: .tester.json  CMakeLists.txt  README.md  fp16.cpp  fp16.h  test.cpp
hse-base-cpp/tasks/game_of_life/: .tester.json  CMakeLists.txt  game_of_life.cpp  game_of_life.h  patterns.h  readme.md  test.cpp  tui.cpp
hse-base-cpp/tasks/http_builder/: .tester.json  CMakeLists.txt  http_builder.cpp  http_builder.h  readme.md  test.cpp
hse-base-cpp/tasks/image_processor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image_processor  image_processor.cpp
hse-base-cpp/tasks/image_processor/src/: blur_filter.cpp  blur_filter.h  color.cpp  color.h  crop_filter.cpp  crop_filter.h  edge_filter.cpp  edge_filter.h  filter.cpp  filter.h  grayscale_filter.cpp  grayscale_filter.h  image.cpp  image.h  loader.cpp  loader.h  negative_filter.cpp  negative_filter.h  sharp_filter.cpp  sharp_filter.h
hse-base-cpp/tasks/interpreter/: .tester.json  CMakeLists.txt  interpreter.cpp  interpreter.h  readme.md  test.cpp
hse-base-cpp/tasks/lru_cache/: .tester.json  lru_cache.cpp  lru_cache.h  test.cpp
hse-base-cpp/tasks/minmax/: .tester.json  CMakeLists.txt  minmax.h  readme.md  test.cpp
hse-base-cpp/tasks/remove/: .tester.json  readme.md  remove.h  test.cpp
hse-base-cpp/tasks/rotate/: .tester.json  readme.md  rotate.h  test.cpp
hse-base-cpp/tasks/safe_arithmetic/: .tester.json  CMakeLists.txt  README.md  safe_arithmetic.cpp  safe_arithmetic.h  test.cpp
hse-base-cpp/tasks/search/: .tester.json  readme.md  search.cpp  search.h  test.cpp
hse-base-cpp/tasks/varint/: .tester.json  CMakeLists.txt  README.md  test.cpp  varint.cpp  varint.h
hse-base-cpp/util/: time_limiter.h
(+99 files in other folders)
